[tool.poetry]
name = "gspins"
version = "0.1.0"
description = ""
authors = ["Max Smagin <lazlogogalac777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.3"
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"

[tool.poetry.scripts]
start = "gspins.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
